--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   "dependencies": {
     "apollo-server": "^3.1.2",
     "graphql": "^15.5.1"
+  },
+  "devDependencies": {
+    "@prisma/client": "^2.28.0",
+    "prisma": "^2.28.0"
   }
 }
