--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server": "^3.1.2",
-    "graphql": "^15.5.1"
+    "bcryptjs": "^2.4.3",
+    "graphql": "^15.5.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@prisma/client": "^2.28.0",
